--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "files.eol": "\n",
     "clang-tidy.fixOnSave": true,
-    "clang-tidy.lintOnSave": true
+    "clang-tidy.lintOnSave": true,
+    "cmake.configureOnOpen": false,
+    "files.exclude": {
+        "**/*.o": true,
+        "ndless-install": true
+    }
 }
