--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
     "recommendations": [
+        "ms-vscode-remote.remote-containers",
         "ms-vscode.cpptools",
-        "coenraads.bracket-pair-colorizer",
         "notskm.clang-tidy"
     ]
 }
