--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "ms-vscode-remote.remote-containers",
         "ms-vscode.cpptools",
-        "notskm.clang-tidy"
+        "notskm.clang-tidy",
+        "webfreak.debug",
     ]
 }
