--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,14 +12,14 @@
             "autorun": [
                 "set confirm off",
                 "make",
-                "set debug remote 1",
+                // "set debug remote 1",
             ],
             "remote": true,
             "cwd": "${workspaceRoot}",
             "valuesFormatting": "prettyPrinters",
             "printCalls": true,
             "stopAtConnect": false,
-            "stopAtEntry": true
+            "stopAtEntry": false
         }
     ]
 }
