Automatically send file to debugger on launch, parallelize build
Also: passing env variables to docker build seems to be broken, despite https://stackoverflow.com/q/47451060

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,10 @@
             "target": "host.docker.internal:3333",
             "gdbpath": "arm-none-eabi-gdb",
             "debugger_args": [],
+            "preLaunchTask": "send and debug",
             "autorun": [
                 "set confirm off",
-                "make",
                 "catch throw",
-                // "set debug remote 1",
             ],
             "remote": true,
             "cwd": "${workspaceRoot}",
